{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "FirstPerspective",
            "id": "026462ff-62c3-4ed2-b285-c1cd11614f25",
            "actions": [
                {
                    "name": "Move(WASD)",
                    "type": "Value",
                    "id": "7d2c81a2-c0a1-47af-bf55-1c98647554e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f25b1964-f36f-4466-a3ff-dd43cc996396",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "aa26b80c-4b3d-4b8f-a55f-8d6f8ac61a5a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4034469f-e75d-40d3-9bb6-3268ee421061",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e7bf03ef-653e-46d4-b914-a03a3db5ed8d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6a10148b-1762-467e-8324-221ecf2705dd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5b8aa81a-085b-4d6d-b34e-62f1d6f81f28",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d4902e66-1a87-430b-bf0f-b803f4538b93",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "49a26875-e9fc-4e68-bbff-61eecb6b2a16",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cc948c5-b036-4a04-8790-8d6232ffdd4e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ThreePerspective",
            "id": "218d9c20-b6cf-432c-b8c0-df95ba7175d9",
            "actions": [
                {
                    "name": "Move(WASD)",
                    "type": "Value",
                    "id": "a413c1d9-1218-4007-8aac-672087a09a61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "12bd7c5d-fc8b-4e5b-a790-de7a7e0b95e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d473a09f-4540-4c5c-9fcf-b1e8318cd0bc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6cd8bff4-5901-4142-8857-ce6a26b44739",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dcf4d6f2-f96a-4b0a-a8db-f8152c2d2931",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f89abf70-80d8-4649-b56d-2bf4b41583cf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0cd73ea1-7e43-48c9-9f67-82139973e3e2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move(WASD)",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9bc437d8-6b0a-48d9-ae20-47ccb9e27c20",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}